# superrequests

./: .drone.jsonnet  .pylintrc  README.md  pyproject.toml  setup.cfg
superrequests/: __init__.py
tests/: test_superrequests.py
